# jupymcp

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  gen.sh  jupymcp.py  pyproject.toml
scripts/: generate-model.py
src/jupymcp/: main.py  model.py
tests/: test_main.py
