[project]
name = "jupymcp"
version = "0.1.1"
description = "Jupyter + MCP"
readme = "README.md"
authors = [
    { name = "Ziya Tang (唐梓涯)", email = "tcztzy@gmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "jupyter-kernel-client>=0.7.1",
    "jupyter-nbmodel-client>=0.13.0",
    "mcp>=1.9.2",
]
[project.scripts]
jupymcp = "jupymcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
